use existing image

--- a/action.yml
+++ b/action.yml
@@ -5,4 +5,4 @@ branding:
   color: "blue"
 runs:
   using: "docker"
-  image: "Dockerfile"
+  image: 'docker://docker.io/statsig/kubectl-via-gcloud:latest'
